--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -16,7 +16,14 @@
 
 .image {
   width: 48%; /* adjust to fit your image size */
-  margin: 1%
+  margin: 1%;
+  overflow: hidden
+}
+
+.image img {
+  // height: 100%;
+  margin-top: -9.45%;
+  margin-bottom: -12%;
 }
 
 // .site-logo {
