--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -17,7 +17,8 @@
 .image {
   width: 48%; /* adjust to fit your image size */
   margin: 1%;
-  overflow: hidden
+  overflow: hidden;
+  border-radius: 1vh;
 }
 
 .image img {
