--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -27,6 +27,13 @@
   margin-bottom: -12.4%;
 }
 
+.main-content dl {
+  grid-template: auto/7em 1fr;
+  justify-items: start;
+}
+dt {
+  max-width: 5.2em;
+}
 // .site-logo {
 //   width: 10%;
 //   height: 100%;
